hphp/hack/test/typecheck/case_type/case_type_subtyping.php.exp
ERROR: File "case_type_subtyping.php", line 17, characters 8-11:
Invalid argument (Typing[4110])
  File "case_type_subtyping.php", line 6, characters 13-19:
  Expected `CT<int>`
  File "case_type_subtyping.php", line 17, characters 8-11:
  But got `float`
ERROR: File "case_type_subtyping.php", line 18, characters 8-13:
Invalid argument (Typing[4110])
  File "case_type_subtyping.php", line 6, characters 13-19:
  Expected `CT<int>`
  File "case_type_subtyping.php", line 18, characters 8-13:
  But got `string`
ERROR: File "case_type_subtyping.php", line 19, characters 8-16:
Invalid argument (Typing[4110])
  File "case_type_subtyping.php", line 6, characters 13-19:
  Expected `CT<int>`
  File "case_type_subtyping.php", line 19, characters 8-16:
  But got `vec<null>`
ERROR: File "case_type_subtyping.php", line 20, characters 8-25:
Invalid argument (Typing[4110])
  File "case_type_subtyping.php", line 6, characters 13-19:
  Expected `CT<int>`
  File "case_type_subtyping.php", line 20, characters 8-25:
  But got `Vector<_>`
ERROR: File "case_type_subtyping.php", line 20, characters 8-25:
Invalid argument (Typing[4110])
  File "case_type_subtyping.php", line 6, characters 16-18:
  Expected `int`
  File "case_type_subtyping.php", line 4, characters 48-48:
    via this generic `T`
  File "case_type_subtyping.php", line 20, characters 17-23:
  But got `vec<int>`
  File "case_type_subtyping.php", line 20, characters 17-23:
  This type argument to `Vector` must match exactly (it is invariant)
